@@ -48,23 +48,24 @@
 
 /* a packet buffer */
 /* Type flags -- some can happen in combinations: T_CWOP + T_WX / T_CWOP + T_POSITION ... */
-#define T_POSITION  (1 << 0) // Packet is of position type
-#define T_OBJECT    (1 << 1) // packet is an object
-#define T_ITEM      (1 << 2) // packet is an item
-#define T_MESSAGE   (1 << 3) // packet is a message
-#define T_NWS       (1 << 4) // packet is a NWS message
-#define T_WX        (1 << 5) // packet is WX data
-#define T_TELEMETRY (1 << 6) // packet is telemetry
-#define T_QUERY     (1 << 7) // packet is a query
-#define T_STATUS    (1 << 8) // packet is status 
-#define T_USERDEF   (1 << 9) // packet is userdefined
-#define T_CWOP      (1 << 10) // packet is recognized as CWOP
-#define T_STATCAPA  (1 << 11) // packet is station capability response
+#define T_POSITION   (1 << 0) // Packet is of position type
+#define T_OBJECT     (1 << 1) // packet is an object
+#define T_ITEM       (1 << 2) // packet is an item
+#define T_MESSAGE    (1 << 3) // packet is a message
+#define T_NWS        (1 << 4) // packet is a NWS message
+#define T_WX         (1 << 5) // packet is WX data
+#define T_TELEMETRY  (1 << 6) // packet is telemetry
+#define T_QUERY      (1 << 7) // packet is a query
+#define T_STATUS     (1 << 8) // packet is status 
+#define T_USERDEF    (1 << 9) // packet is userdefined
+#define T_CWOP       (1 << 10) // packet is recognized as CWOP
+#define T_STATCAPA   (1 << 11) // packet is station capability response
 #define T_THIRDPARTY (1 << 12)
-#define T_ALL	    (1 << 15) // set on _all_ packets
+#define T_ALL	     (1 << 15) // set on _all_ packets
 
-#define F_DUPE    1	/* Duplicate of a previously seen packet */
-#define F_HASPOS  2	/* This packet has valid parsed position */
+#define F_DUPE    	(1 << 0) // Duplicate of a previously seen packet
+#define F_HASPOS  	(1 << 1) // This packet has valid parsed position
+#define F_HAS_TCPIP	(1 << 2) // There is a TCPIP* in the path
 
 struct pbuf_t {
 	struct pbuf_t *next;
@@ -84,18 +85,19 @@ struct pbuf_t {
 	uint16_t flags;		/* bitmask: one or more of F_* */
 	uint16_t srcname_len;	/* parsed length of source (object, item, srcall) name 3..9 */
 	uint16_t dstcall_len;	/* parsed length of destination callsign *including* SSID */
+	uint16_t dstname_len;   /* parsed length of message destination including SSID */
 	uint16_t entrycall_len;
 	
 	int packet_len;		/* the actual length of the TNC2 packet */
 	int buf_len;		/* the length of this buffer */
 	
-	const char *destcall;	   /* start of dest callsign with SSID */
-	const char *dstcall_end;   /* end of dest callsign with SSID */
 	const char *srccall_end;   /* source callsign with SSID */
-//	const char *qconst_start;  /* "qAX,incomingSSID:"	-- for q and e filters  */
+	const char *dstcall_end_or_ssid;   /* end of dest callsign (without SSID) */
+	const char *dstcall_end;   /* end of dest callsign with SSID */
+	const char *qconst_start;  /* "qAX,incomingSSID:"	-- for q and e filters  */
 	const char *info_start;    /* pointer to start of info field */
 	const char *srcname;       /* source's name (either srccall or object/item name) */
-	const char *recipient;	   /* message recipient field */
+	const char *dstname;       /* message destination callsign */
 	
 	float lat;	/* if the packet is PT_POSITION, latitude and longitude go here */
 	float lng;	/* .. in RADIAN */
